# seam-carve.cpp

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  NOTE  Untitled.ipynb  carve.cpp  carve.h  image.cpp  image.h  main.cpp  operations.cpp  operations.h  processing.cpp  processing.h
Test/: CMakeCache.txt  CMakeLists.txt  Image_tests.cpp  cmake_install.cmake  convolution_tests.cpp  operations_tests.cpp  processing_tests.cpp  runTests
inc/tqdm/: tqdm.h
